--- a/img/app.css
+++ b/img/app.css
@@ -20,11 +20,16 @@ header {
 .highlight { 
     background-color: yellow;}
 table {
-    width: 100%;
+    width: 100%
     border-collapse: collapse;
     margin-top: 30px;
 }
-th{
+th, td {
+    padding: 12px;
+    border: none;
+}
+
+th {
     background-color:  #6495ed ;
     color: white;
     padding: 1px 8px;
