--- a/img/app.css
+++ b/img/app.css
@@ -2,6 +2,12 @@ header {
     background-color: lightblue;
     text-align: left;
     padding: 20px;
+
+    /*pattern visivo come sfondo*/
+    background-image: url("/img/pattern.png");
+    background-repeat: repeat-x;
+    background-position: center;
+    background-size: auto;
 } 
 .logo {
     width: 200px;
@@ -18,7 +24,8 @@ header {
     height: auto;
 }
 .highlight { 
-    background-color: yellow;}
+    background-color: yellow;
+}
 table {
     width: 100%
     border-collapse: collapse;
@@ -29,7 +36,7 @@ th, td {
     border: none;
 }
 
-th {
+th { 
     background-color:  #6495ed ;
     color: white;
     padding: 1px 8px;
@@ -43,5 +50,5 @@ tbody tr:nth-child(even) td{
     background-color: white;
 }
 
-
+    
     
